docs: sampler to experimentalist at the appropriate places

--- a/docs/Basic Usage.ipynb
+++ b/docs/Basic Usage.ipynb
@@ -3,11 +3,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Import Modules\n",
     "\n",
@@ -17,11 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -35,11 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -56,9 +44,6 @@
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
-    },
-    "pycharm": {
-     "name": "#%% md\n"
     }
    },
    "source": [
@@ -70,11 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Define meta-parameters\n",
@@ -90,11 +71,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Plot The Data\n",
     "\n",
@@ -104,11 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -129,11 +102,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Define And Fit Theorists\n",
     "\n",
@@ -145,11 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -179,11 +144,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Plot Theorists On Data\n",
     "\n",
@@ -193,11 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -222,25 +179,17 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Plot Model Disagreements\n",
     "\n",
-    "We can also plot the disagreement between each pair of theorists. The grey dashed lines represent the degree of disagreement for each datapoint. Computationally the Model Disagreement Sampler takes the square of these numbers to determine where disagreement is largest. "
+    "We can also plot the disagreement between each pair of theorists. The grey dashed lines represent the degree of disagreement for each datapoint. Computationally the Model Disagreement Experimentalist takes the square of these numbers to determine where disagreement is largest."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -272,25 +221,17 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Run And Report Model Disagreement Samples\n",
     "\n",
-    "Now we will get a proposal from the sampler as to which datapoints to investigate next. We will retrieve 5 new datapoints in this example."
+    "Now we will get a proposal from the experimentalist as to which datapoints to investigate next. We will retrieve 5 new datapoints in this example."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -314,11 +255,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Plot New Datapoints With Old\n",
     "\n",
@@ -328,11 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -353,11 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
