add short explanation to experiment runner

--- a/docs/RnnSindy Synthetic.ipynb
+++ b/docs/RnnSindy Synthetic.ipynb
@@ -203,22 +203,12 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
-   "id": "b498ba974a2402c0"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "",
-   "id": "402b150ff64ea52b",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "raw",
-   "source": "### Runner",
-   "id": "e18d8865d069d63d"
+   "source": [
+    "### Experiment Runner\n",
+    "\n",
+    "Here, we create a synthetic runner that uses a q-learning algorithm"
+   ],
+   "id": "5faacf9a6d9915a1"
   },
   {
    "metadata": {},
